Bug 258897 - "Disable swap files syncing" option does not work
Summary: "Disable swap files syncing" option does not work
Status: RESOLVED FIXED
Alias: None
Product: kate
Classification: Applications
Component: part (other bugs)
Version First Reported In: Git
Platform: openSUSE Linux
: NOR normal
Target Milestone: ---
Assignee: KWrite Developers
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2010-12-05 13:01 UTC by magist3r
Modified: 2016-05-28 19:27 UTC (History)
8 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
attachment-5565-0.html (2.16 KB, text/html)
2016-03-10 13:50 UTC, Alex Pacini
Details

Note You need to log in before you can comment on or make changes to this bug.
Description magist3r 2010-12-05 13:01:50 UTC
Version:           SVN (using Devel) 
OS:                Linux

Kate creates a file ".swp.filename" which is updated by each pressing of a key. It is good, but dropbox too often updates this file on the server. And switching-off of this function doesn't work.

Reproducible: Always
Comment 1 EGD 2010-12-25 10:45:55 UTC
*** This bug has been confirmed by popular vote. ***
Comment 2 Milian Wolff 2010-12-26 18:27:22 UTC
fixed in git, needs to be backported
Comment 3 Christoph Cullmann 2010-12-28 14:12:23 UTC
SVN commit 1209888 by cullmann:

mwolff:
    properly disable swap file tracking based on configuration
    
BUG: 258897


 M  +8 -2      kateswapfile.cpp  
 M  +1 -0      kateswapfile.h  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1209888
Comment 4 Andrej M. 2013-02-22 13:52:49 UTC
Hello, I'm experiencing this bug on KDE 4.10 from Kubuntu backports. The settings was checked/unchecked multiple times, but with no change. Swap file is still generated and updated on each key press. Could somebody please verify this? If it's reproducible, then the bug should be reopened.
Comment 5 Alex Pacini 2013-03-27 20:51:41 UTC
You should open a new bug, since this one was marked as _resolved fixed_
Comment 6 Dominik Haumann 2013-04-03 20:25:11 UTC
Disabling the frequent syncing should be fixed according to bug #309751.
Comment 7 Andrej M. 2013-04-06 19:42:55 UTC
Yes, it should be fixed, but I'm experiencing it right now :). I just posted here to see if someone could reproduce this. It could also be a Ubuntu packaging bug.
Comment 8 Michael D 2013-05-19 15:07:38 UTC
I'm experiencing the bug as well on Kubuntu 13.04 (fresh install), KDE 4.10.2. Is this a Kubuntu thing? It happens in Kate as well, of course.
Comment 9 Michael D 2013-11-10 11:05:18 UTC
This needs to be reopened since the bug is still present in KDE 4.11.2 and is excruciatingly annoying for anyone running dropbox.
Comment 10 Christoph Feck 2013-11-17 19:05:53 UTC
Michael, see bug 321135.
Comment 11 Peter 2015-05-16 16:24:47 UTC
As of May 2015 this option is STILL not working.
This option does nothing, and in both states swap file is being synced, which reduces performance dramaticaly.
Please reopen.

Kate version 3.14.3
KDE version 4.14.3
Comment 12 razrfalcon 2015-06-19 06:44:33 UTC
Still not FIXED.
Comment 13 Michael D 2015-06-19 07:55:44 UTC
Yes, this bug needs to be reopened.
Comment 14 Denis 2016-03-10 13:21:55 UTC
Well, is it very difficult to make possibility to Disable swap files syncing?? It troubles me almost everyday, as I work in Kile (the editor based on Kate) with files in Dropbox. And every time I press a key the synchronizing process starts and it disturbs the hard drive! To work normally, I must to switch off the Dropbox syncing, and after finishing - not to forget to switch it on. It happens months, years... Am I alone??
Comment 15 Michael D 2016-03-10 13:46:47 UTC
Why was this reopened? It's fixed in the latest KDE software from git (and long before that even--probably since its port to KF5). My guess is Denis is using KDE4.
Comment 16 Alex Pacini 2016-03-10 13:50:44 UTC
Created attachment 97820 [details]
attachment-5565-0.html

I have the same issue in KDE5.


---
Alex Pacini, MS
email: alexpacini90@gmail.com
blog: https://pacinispace.blogspot.com
ORCID: orcid.org/0000-0002-0316-4989
skype: alex_pacini

---

On Thu, Mar 10, 2016 at 2:46 PM, Michael D via KDE Bugzilla <
bugzilla_noreply@kde.org> wrote:

> https://bugs.kde.org/show_bug.cgi?id=258897
>
> --- Comment #15 from Michael D <nortexoid@gmail.com> ---
> Why was this reopened? It's fixed in the latest KDE software from git (and
> long
> before that even--probably since its port to KF5). My guess is Denis is
> using
> KDE4.
>
> --
> You are receiving this mail because:
> You are on the CC list for the bug.
>
Comment 17 Denis 2016-03-10 15:04:23 UTC
(In reply to Michael D from comment #15)
> Why was this reopened? It's fixed in the latest KDE software from git (and
> long before that even--probably since its port to KF5). My guess is Denis is
> using KDE4.

Yes, my Kile shows "KDE 4.14.13" :( I have newly installed Kubuntu 15.10, upgraded and rebooted.
However, Kate shows "KDE 5.15.0". And "Disable swap files syncing" works there (after rebooting the application)! Moreover, there is an option to change the swap folder. Perfect! I want this for Kile :''(
Comment 18 Michael D 2016-03-10 15:33:01 UTC
If you want to use Kile with the KF5 version of katepart, you can install it from git by adding the ppa at https://launchpad.net/~kile/+archive/ubuntu/master. Be warned that I experienced some bugginess on my system doing this, so I ended up purging the ppa. It might be in a better state now, though, as that was some time ago.
Comment 19 Christoph Cullmann 2016-05-28 19:27:49 UTC
Hi, I am very sorry, but there are no new kde 4 releases for that stuff.
You need to wait for the Kile KF5 version, which seems not that far away.