properly disable swap file tracking based on configuration

BUG: 258897